[package]
name = "book_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
mockito = "0.31.0"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking"] }

[dev-dependencies]
filename = "0.1.1"
tempfile = "3.3.0"
